objects/HealthCloudGA__Clinical_Assessment_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>HealthCloudGA__Assessment_Task_Queue__c</fullName>
        <label>Assessment Task Queue</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Care_Program__c</fullName>
        <label>Care Program</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Consent_Auth_Data_Form_Use__c</fullName>
        <label>Consent Auth Data Form Use</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Consent_Data_Use_Purpose__c</fullName>
        <label>Consent Data Use Purpose</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Household_Consent_Auth_Data_Form_Use__c</fullName>
        <label>Household Consent Auth Data Form Use</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MinorChildAgeLimit__c</fullName>
        <description>Age limit for minor child.</description>
        <label>Minor Child Age Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Patient_RecordType_Name__c</fullName>
        <defaultValue>&quot;ERM Patient&quot;</defaultValue>
        <label>Patient RecordType Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PrescribedQuarantineDays__c</fullName>
        <description>No of days to quarantine.</description>
        <label>Prescribed Quarantine Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Clinical Assessment Setting</label>
    <pluralLabel>Clinical Assessment Settings</pluralLabel>
</CustomObject>